@@ -558,11 +558,13 @@ static gchar *
 gst_vorbisenc_get_tag_value (const GstTagList * list, const gchar * tag,
     int index)
 {
+  GType tag_type;
   gchar *vorbisvalue = NULL;
 
-  if (tag == NULL) {
+  if (tag == NULL)
     return NULL;
-  }
+
+  tag_type = gst_tag_get_type (tag);
 
   /* get tag name right */
   if ((strcmp (tag, GST_TAG_TRACK_NUMBER) == 0)
@@ -572,23 +574,22 @@ gst_vorbisenc_get_tag_value (const GstTagList * list, const gchar * tag,
     guint track_no;
 
     if (!gst_tag_list_get_uint_index (list, tag, index, &track_no))
-      g_assert_not_reached ();
-    vorbisvalue = g_strdup_printf ("%u", track_no);
-  } else if (strcmp (tag, GST_TAG_DATE) == 0) {
-    /* FIXME: how are dates represented in vorbis files? */
-    GDate *date;
-    guint u;
+      g_return_val_if_reached (NULL);
 
-    if (!gst_tag_list_get_uint_index (list, tag, index, &u))
-      g_assert_not_reached ();
-    date = g_date_new_julian (u);
+    vorbisvalue = g_strdup_printf ("%u", track_no);
+  } else if (tag_type == GST_TYPE_DATE) {
+    GDate *date;
+
+    if (!gst_tag_list_get_date_index (list, tag, index, &date))
+      g_return_val_if_reached (NULL);
+
     vorbisvalue =
         g_strdup_printf ("%04d-%02d-%02d", (gint) g_date_get_year (date),
         (gint) g_date_get_month (date), (gint) g_date_get_day (date));
     g_date_free (date);
-  } else if (gst_tag_get_type (tag) == G_TYPE_STRING) {
+  } else if (tag_type == G_TYPE_STRING) {
     if (!gst_tag_list_get_string_index (list, tag, index, &vorbisvalue))
-      g_assert_not_reached ();
+      g_return_val_if_reached (NULL);
   }
 
   return vorbisvalue;
