@@ -1,3 +1,11 @@
+2005-10-13  Tim-Philipp Müller  <tim at centricular dot net>
+
+	* ext/vorbis/vorbisenc.c:
+	* gst-libs/gst/tag/gstid3tag.c: (gst_tag_list_new_from_id3v1):
+	* gst-libs/gst/tag/gstvorbistag.c: (gst_vorbis_tag_add),
+	(gst_tag_to_vorbis_comments):
+	  Fix handling of GST_TAG_DATE, which is now of GST_TYPE_DATE.
+
 2005-10-13  Stefan Kost  <ensonic@users.sf.net>
 
 	* examples/stats/mp2ogg.c:
